// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StockList component should display empty 1`] = `""`;

exports[`StockList component should show as watchlist 1`] = `
<div
  className="stockList"
>
  <WatchRow
    key="a"
    stock={
      Object {
        "symbol": "a",
      }
    }
  />
  <WatchRow
    key="c"
    stock={
      Object {
        "symbol": "c",
      }
    }
  />
  <WatchRow
    key="z"
    stock={
      Object {
        "symbol": "z",
      }
    }
  />
</div>
`;

exports[`StockList component should sort list 1`] = `
<div
  className="stockList"
>
  <StockRow
    key="a"
    stock={
      Object {
        "symbol": "a",
      }
    }
  />
  <StockRow
    key="c"
    stock={
      Object {
        "symbol": "c",
      }
    }
  />
  <StockRow
    key="z"
    stock={
      Object {
        "symbol": "z",
      }
    }
  />
</div>
`;
